# PoorCraftV2

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Initialfixes.md  LICENSE  QUICKSTART.md  README.md  RT_MVP_IMPLEMENTATION.md  TESTING.md  VULKAN_IMPLEMENTATION_SUMMARY.md  VULKAN_RT_IMPLEMENTATION.md  build.gradle  config.ini  create_textures.py  gradle.properties  settings.gradle
.github/workflows/: build.yml
assets/: README.md
assets/textures/particles/: README.md
buildSrc/: build.gradle
client/: build.gradle
client/src/main/resources/shaders/: basic.frag  basic.vert  bounding_box.frag  bounding_box.vert  chunk.frag  chunk.vert  entity.frag  entity.vert  text.frag  text.vert  (+2 more)
cmake/: VerifyExecutable.cmake
common/: build.gradle
common/src/main/resources/: default-config.yml  log4j2.xml
core/: build.gradle
distribution/: launch4j-config.xml
distribution/icons/: README.md  poorcraft.icns
distribution/jpackage-config/: linux-deb.properties  linux-rpm.properties  macos.properties
docs/: API.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  MODDING.md  TROUBLESHOOTING.md
include/poorcraft/core/: Config.h  Event.h  EventBus.h  GameLoop.h  Logger.h
include/poorcraft/entity/: Component.h  Entity.h  EntityManager.h  HumanoidMesh.h  PlayerSkin.h
include/poorcraft/entity/components/: AnimationController.h  NetworkIdentity.h  PlayerController.h  Renderable.h  Transform.h
include/poorcraft/entity/systems/: AnimationSystem.h  EntityRenderer.h
include/poorcraft/events/: InputEvent.h  WindowEvent.h
include/poorcraft/input/: Input.h
include/poorcraft/memory/: MemoryTracker.h  PoolAllocator.h
include/poorcraft/modding/: LuaScriptEngine.h  ModAPI.h  ModEvents.h  ModInfo.h  ModManager.h
include/poorcraft/network/: ChunkCompression.h  NetworkClient.h  NetworkEvents.h  NetworkManager.h  NetworkPackets.h  NetworkPeer.h  NetworkServer.h  PacketSerializer.h  PacketType.h
include/poorcraft/physics/: AABB.h  CollisionDetector.h  MovementController.h  PhysicsWorld.h  Player.h  RaycastHit.h  Raycaster.h
include/poorcraft/platform/: DynamicLibrary.h  Platform.h
include/poorcraft/rendering/: Camera.h  DebugRenderer.h  Framebuffer.h  GPUCapabilities.h  LightingManager.h  OpenGLBackend.h  ParticleSystem.h  RenderBackend.h  Renderer.h  Shader.h  SkyRenderer.h  Texture.h  TextureAtlas.h  VertexArray.h  WaterRenderer.h
include/poorcraft/resource/: BinaryResource.h  Resource.h  ResourceManager.h
include/poorcraft/ui/: GameState.h  UIManager.h  UIScreen.h  UIScreenManager.h
include/poorcraft/ui/screens/: ChatUI.h  HUDUI.h  InventoryUI.h  LoadingScreenUI.h  MainMenuUI.h  MultiplayerMenuUI.h  PauseMenuUI.h  ServerBrowserUI.h  SettingsUI.h
include/poorcraft/vulkan/: RTAccelerationStructure.h  RTRenderer.h  VulkanBackend.h  VulkanContext.h  VulkanRasterRenderer.h  VulkanResourceManager.h  VulkanShaderManager.h
include/poorcraft/window/: Window.h
include/poorcraft/world/: BiomeMap.h  BiomeType.h  BlockRegistry.h  BlockType.h  Chunk.h  ChunkCoord.h  ChunkManager.h  ChunkMesh.h  Frustum.h  StructureGenerator.h  TerrainGenerator.h  World.h
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/stb/: CMakeLists.txt  stb_image.cpp
modapi/: README.md  build.gradle
mods/: README.md
mods/event_logger_mod/: logger.lua  mod.json
mods/example_lua_mod/: init.lua  mod.json
mods/example_native_mod/: CMakeLists.txt  example_native_mod.cpp  mod.json
scripts/: build.bat  build.sh  clean_build.bat  clean_build.sh  compile_shaders.sh  download_font.sh  generate_placeholder_textures.py  setup_dependencies.bat  setup_dependencies.sh  verify_build.bat  verify_build.sh
server/: build.gradle
server/src/main/resources/: server-config.yml
shaders/: README.md
shaders/basic/: block.frag  block.vert  color.frag  color.vert  entity.frag  entity.vert  fullscreen.frag  fullscreen.vert  texture.frag  texture.vert
shaders/particle/: particle.frag  particle.vert
shaders/rt/: closesthit.rchit  miss.rmiss  raygen.rgen
shaders/sky/: sky.frag  sky.vert
shaders/water/: water.frag  water.vert
src/: CMakeLists.txt  main.cpp
src/core/: Config.cpp  Event.cpp  EventBus.cpp  GameLoop.cpp  Logger.cpp
src/entity/: Entity.cpp  EntityManager.cpp  HumanoidMesh.cpp  PlayerSkin.cpp
src/entity/components/: AnimationController.cpp  NetworkIdentity.cpp  PlayerController.cpp  Renderable.cpp  Transform.cpp
src/entity/systems/: AnimationSystem.cpp  EntityRenderer.cpp
src/events/: InputEvent.cpp  WindowEvent.cpp
src/input/: Input.cpp
src/memory/: MemoryTracker.cpp  PoolAllocator.cpp
src/modding/: LuaScriptEngine.cpp  ModAPI.cpp  ModEvents.cpp  ModInfo.cpp  ModManager.cpp
src/network/: ChunkCompression.cpp  NetworkClient.cpp  NetworkEvents.cpp  NetworkManager.cpp  NetworkPackets.cpp  NetworkPeer.cpp  NetworkServer.cpp  PacketSerializer.cpp  PacketType.cpp
src/physics/: AABB.cpp  CollisionDetector.cpp  MovementController.cpp  PhysicsWorld.cpp  Player.cpp  Raycaster.cpp
src/platform/: DynamicLibrary.cpp  Platform.cpp
src/rendering/: Camera.cpp  DebugRenderer.cpp  Framebuffer.cpp  GPUCapabilities.cpp  LightingManager.cpp  OpenGLBackend.cpp  ParticleSystem.cpp  RenderBackend.cpp  Renderer.cpp  Shader.cpp  SkyRenderer.cpp  Texture.cpp  TextureAtlas.cpp  VertexArray.cpp  WaterRenderer.cpp
src/resource/: BinaryResource.cpp  Resource.cpp  ResourceManager.cpp
src/ui/: GameState.cpp  UIManager.cpp  UIScreen.cpp  UIScreenManager.cpp
src/ui/screens/: ChatUI.cpp  HUDUI.cpp  InventoryUI.cpp  LoadingScreenUI.cpp  MainMenuUI.cpp  MultiplayerMenuUI.cpp  PauseMenuUI.cpp  ServerBrowserUI.cpp  SettingsUI.cpp
src/vulkan/: RTAccelerationStructure.cpp  RTRenderer.cpp  VulkanBackend.cpp  VulkanContext.cpp  VulkanRasterRenderer.cpp  VulkanResourceManager.cpp  VulkanShaderManager.cpp
src/window/: Window.cpp
src/world/: BiomeMap.cpp  BiomeType.cpp  BlockRegistry.cpp  BlockType.cpp  Chunk.cpp  ChunkCoord.cpp  ChunkManager.cpp  ChunkMesh.cpp  Frustum.cpp  StructureGenerator.cpp  TerrainGenerator.cpp  World.cpp
(+190 files in other folders)
